# wtslog

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yaml
src/wtslog/: Logger.py
src/wtslog.egg-info/: SOURCES.txt  top_level.txt
