[metadata]
name = wtslog
version = 0.2.1
author = kiriDevs
author_email = author@example.com
description = a Way Too Simple LOGger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kiriDevs/wtslog
project_urls =
    Bug Tracker = https://github.com/kiriDevs/wtslog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
